--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -5,5 +5,5 @@
         android:id="@+id/app_bar_settings"
         android:icon="@drawable/ic_settings_white_24dp"
         android:title="Settings"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
